--- a/index.html
+++ b/index.html
@@ -221,6 +221,22 @@
             </div>
         </div>
     </div>
+    <div>
+        <div class="slider_item">
+            <div class="slider_image"></div>
+            <div class="slider_info">
+                <a class="link" href="#">Команда
+                    <svg class="arrow" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.5 2L8 6.5L3.5 11"/>
+                    </svg>
+                </a>
+                <h2>Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у
+                    ситуаціях, коли більшість безсилі.</h2>
+                <p class="name">Олександр Олександровський</p>
+                <p class="position">Керуючий партнер</p>
+            </div>
+        </div>
+    </div>
 </section>
 <section class="partners container">
     <div class="partners_info">
