--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
                 </ul>
             </nav>
         </div>
+        <div class="header_mobile_menu_block">
+            <button type="button" data-bs-toggle="modal" data-bs-target="#menu-modal">
+                <svg width="32" height="33" viewBox="0 0 32 33" xmlns="http://www.w3.org/2000/svg">
+                    <g id="Button / Hamburger">
+                        <path id="Vector" d="M7 10.5H25" stroke="white" stroke-width="2"/>
+                        <path id="Vector_2" d="M7 16.5H25" stroke="white" stroke-width="2"/>
+                        <path id="Vector_3" d="M7 22.5H25" stroke="white" stroke-width="2"/>
+                    </g>
+                </svg>
+            </button>
+        </div>
     </div>
     <!--    <nav class="navbar block header_menu">-->
     <!--        <a class="navbar-brand main_logo" href="index.html">-->
@@ -459,6 +470,16 @@
     </div>
 </footer>
 
+<div class="modal" id="menu-modal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content animate-bottom-menu" style="">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam autem error nulla, quod reprehenderit!
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
