--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <div class="advantages_image">
                     <img src="images/Ecommerce.svg" alt="">
                 </div>
-                <h4><a href="#">IT and e-commerce</a></h4>
+                <h4><a href="services.html">IT and e-commerce</a></h4>
                 <p>An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts
                     you
                     from doing business. But there is not much work to do to hire an in-house lawyer.</p>
@@ -473,9 +473,30 @@
 <div class="modal" id="menu-modal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content animate-bottom-menu" style="">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            <div class="modal-body">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam autem error nulla, quod reprehenderit!
+            <button type="button" data-bs-dismiss="modal" aria-label="Close">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                    <path d="M7 7L25 25" stroke="#EC6F5D" stroke-width="2"/>
+                    <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
+                </svg>
+            </button>
+            <div>
+                    <ul class="header_nav_list">
+                        <li>
+                            <a href="#">about us</a>
+                        </li>
+                        <li>
+                            <a href="#">services</a>
+                        </li>
+                        <li>
+                            <a href="#">team</a>
+                        </li>
+                        <li>
+                            <a href="#">publications</a>
+                        </li>
+                        <li>
+                            <a href="#">contact</a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </div>
