--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
                         <a href="#">about us</a>
                     </li>
                     <li>
-                        <a href="#">services</a>
+                        <a class="active" href="#">services</a>
                     </li>
                     <li>
                         <a href="#">team</a>
@@ -164,7 +164,7 @@
 <div class="gradient_3_block">
     <div class="gradient_3"></div>
 </div>
-<section class="news">
+<section class="news services_news">
     <div class="container news_content">
         <a class="link" href="#">Publications
             <svg class="arrow" xmlns="http://www.w3.org/2000/svg">
@@ -215,22 +215,22 @@
                 <div class="dot"></div>
                 <a href="#">On map</a>
             </div>
-            <div class="footer_copyright">
-                <p>© 2021 HLEGAL Law company, LLC</p>
+            <div class="footer_socials">
+                <a class="footer_facebook_logo" href="https://facebook.com/">
+                    <svg class="footer_facebook_svg" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_123133_1645)">
+                            <path d="M38 19.1161C38 8.55857 29.4934 0 19 0C8.50658 0 0 8.55857 0 19.1161C0 28.6575 6.94803 36.5659 16.0312 38V24.6419H11.207V19.1161H16.0312V14.9046C16.0312 10.1136 18.8678 7.46723 23.2078 7.46723C25.2866 7.46723 27.4609 7.84059 27.4609 7.84059V12.545H25.0651C22.7048 12.545 21.9688 14.0185 21.9688 15.5302V19.1161H27.2383L26.3959 24.6419H21.9688V38C31.052 36.5659 38 28.6575 38 19.1161Z"/>
+                        </g>
+                    </svg>
+                </a>
+                <div class="dot"></div>
+                <a class="footer_phone" href="tel:0800211927">0800 211 927</a>
+                <div class="dot"></div>
+                <a class="footer_email" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
             </div>
         </div>
-        <div class="footer_socials">
-            <a class="footer_facebook_logo" href="https://facebook.com/">
-                <svg class="footer_facebook_svg" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_123133_1645)">
-                        <path d="M38 19.1161C38 8.55857 29.4934 0 19 0C8.50658 0 0 8.55857 0 19.1161C0 28.6575 6.94803 36.5659 16.0312 38V24.6419H11.207V19.1161H16.0312V14.9046C16.0312 10.1136 18.8678 7.46723 23.2078 7.46723C25.2866 7.46723 27.4609 7.84059 27.4609 7.84059V12.545H25.0651C22.7048 12.545 21.9688 14.0185 21.9688 15.5302V19.1161H27.2383L26.3959 24.6419H21.9688V38C31.052 36.5659 38 28.6575 38 19.1161Z"/>
-                    </g>
-                </svg>
-            </a>
-            <div class="dot"></div>
-            <a class="footer_phone" href="tel:0800211927">0800 211 927</a>
-            <div class="dot"></div>
-            <a class="footer_email" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
+        <div class="footer_copyright">
+            <p>© 2021 HLEGAL Law company, LLC</p>
         </div>
     </div>
 </footer>
