--- a/services.html
+++ b/services.html
@@ -79,6 +79,17 @@
                 </ul>
             </nav>
         </div>
+        <div class="header_mobile_menu_block">
+            <button type="button" data-bs-toggle="modal" data-bs-target="#menu-modal">
+                <svg width="32" height="33" viewBox="0 0 32 33" xmlns="http://www.w3.org/2000/svg">
+                    <g id="Button / Hamburger">
+                        <path id="Vector" d="M7 10.5H25" stroke="currentColor" stroke-width="2"/>
+                        <path id="Vector_2" d="M7 16.5H25" stroke="currentColor" stroke-width="2"/>
+                        <path id="Vector_3" d="M7 22.5H25" stroke="currentColor" stroke-width="2"/>
+                    </g>
+                </svg>
+            </button>
+        </div>
     </div>
 </header>
 <section class="gradient">
@@ -97,7 +108,7 @@
         </button>
 
         <div class="modal" id="cosultation" tabindex="-1" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog popup_dialog">
                 <div class="modal-content popup">
                     <div class="popup_header">
                         <h2>We would like to help you</h2>
@@ -234,6 +245,38 @@
         </div>
     </div>
 </footer>
+
+<div class="modal" id="menu-modal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content animate-bottom-menu" style="">
+            <button type="button" data-bs-dismiss="modal" aria-label="Close">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                    <path d="M7 7L25 25" stroke="#EC6F5D" stroke-width="2"/>
+                    <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
+                </svg>
+            </button>
+            <div>
+                <ul class="mobile_nav_list">
+                    <li class="active">
+                        <a href="#">about us</a>
+                    </li>
+                    <li>
+                        <a href="services.html">services</a>
+                    </li>
+                    <li>
+                        <a href="#">team</a>
+                    </li>
+                    <li>
+                        <a href="#">publications</a>
+                    </li>
+                    <li>
+                        <a href="#">contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
