--- a/index.html
+++ b/index.html
@@ -84,64 +84,14 @@
             <button type="button" data-bs-toggle="modal" data-bs-target="#menu-modal">
                 <svg width="32" height="33" viewBox="0 0 32 33" xmlns="http://www.w3.org/2000/svg">
                     <g id="Button / Hamburger">
-                        <path id="Vector" d="M7 10.5H25" stroke="white" stroke-width="2"/>
-                        <path id="Vector_2" d="M7 16.5H25" stroke="white" stroke-width="2"/>
-                        <path id="Vector_3" d="M7 22.5H25" stroke="white" stroke-width="2"/>
+                        <path id="Vector" d="M7 10.5H25" stroke="currentColor" stroke-width="2"/>
+                        <path id="Vector_2" d="M7 16.5H25" stroke="currentColor" stroke-width="2"/>
+                        <path id="Vector_3" d="M7 22.5H25" stroke="currentColor" stroke-width="2"/>
                     </g>
                 </svg>
             </button>
         </div>
     </div>
-    <!--    <nav class="navbar block header_menu">-->
-    <!--        <a class="navbar-brand main_logo" href="index.html">-->
-    <!--            <img src="images/Logo.svg" alt="law company site logo">-->
-    <!--        </a>-->
-    <!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-    <!--            <span class="navbar-toggler-icon"></span>-->
-    <!--        </button>-->
-    <!--        <div class="collapse navbar-collapse header_menu_block" id="navbarSupportedContent">-->
-    <!--            <div class="navbar-nav header_menu_info">-->
-    <!--                <nav>-->
-    <!--                    <ul class="menu_lang">-->
-    <!--                        <li><a href="#" id="language-uk">УК</a></li>-->
-    <!--                        <li><a href="#" id="language-ru">РУ</a></li>-->
-    <!--                        <li class="active"><a href="#" id="language-en">EN</a></li>-->
-    <!--                    </ul>-->
-    <!--                </nav>-->
-    <!--                <div class="dot"></div>-->
-    <!--                <p class="address">Kyiv, Mechnikova str, 14/1</p>-->
-    <!--                <div class="dot"></div>-->
-    <!--                <a class="phone" href="tel:0800211927">0800 211 927</a>-->
-    <!--                <div class="dot"></div>-->
-    <!--                <a class="facebook_header" href="https://facebook.com/">-->
-    <!--                    <svg class="facebook_svg" xmlns="http://www.w3.org/2000/svg">-->
-    <!--                        <g clip-path="url(#clip0_123133_740)">-->
-    <!--                            <path d="M24 12.5733C24 5.90541 18.6274 0.5 12 0.5C5.37258 0.5 0 5.90541 0 12.5733C0 18.5995 4.38823 23.5943 10.125 24.5V16.0633H7.07813V12.5733H10.125V9.91343C10.125 6.88755 11.9165 5.21615 14.6576 5.21615C15.9705 5.21615 17.3438 5.45195 17.3438 5.45195V8.42313H15.8306C14.3399 8.42313 13.875 9.35379 13.875 10.3086V12.5733H17.2031L16.6711 16.0633H13.875V24.5C19.6118 23.5943 24 18.5995 24 12.5733Z"/>-->
-    <!--                        </g>-->
-    <!--                    </svg>-->
-    <!--                </a>-->
-    <!--            </div>-->
-    <!--            <nav class="dropdown-menu header_nav" role="navigation" aria-labelledby="navbarDropdown">-->
-    <!--                <ul class="header_nav_list">-->
-    <!--                    <li class="dropdown-item">-->
-    <!--                        <a href="#">about us</a>-->
-    <!--                    </li>-->
-    <!--                    <li class="dropdown-item">-->
-    <!--                        <a href="#">services</a>-->
-    <!--                    </li>-->
-    <!--                    <li class="dropdown-item">-->
-    <!--                        <a href="#">team</a>-->
-    <!--                    </li>-->
-    <!--                    <li class="dropdown-item">-->
-    <!--                        <a href="#">publications</a>-->
-    <!--                    </li>-->
-    <!--                    <li class="dropdown-item">-->
-    <!--                        <a href="#">contact</a>-->
-    <!--                    </li>-->
-    <!--                </ul>-->
-    <!--            </nav>-->
-    <!--        </div>-->
-    <!--    </nav>-->
 </header>
 <section class="gradient">
     <div class="top_block container">
@@ -251,7 +201,7 @@
                 <div class="advantages_image">
                     <img src="images/Support.svg" alt="">
                 </div>
-                <h4 class="center_advantage"><a href="#">Comprehensive daily legal support</a></h4>
+                <h4 class="center_advantage1"><a href="#">Comprehensive daily legal support</a></h4>
                 <p>In addition, over time, the work will become the same type and uninteresting for a full-time lawyer.
                     And
                     we know very well how difficult it is to find a good candidate with experience in the field of
@@ -279,7 +229,7 @@
                 <div class="advantages_image">
                     <img src="images/Protection.svg" alt="">
                 </div>
-                <h4 class="center_advantage"><a href="#">Protection of business, intellectual property</a></h4>
+                <h4 class="center_advantage2"><a href="#">Protection of business, intellectual property</a></h4>
                 <p>And all the other time he will work on new diverse projects, so he will definitely not stop in
                     professional development. One way or another, all Axon Partners will work for you instead of a
                     corporate
@@ -472,7 +422,7 @@
 
 <div class="modal" id="menu-modal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content animate-bottom-menu" style="">
+        <div class="modal-content animate-bottom-menu">
             <button type="button" data-bs-dismiss="modal" aria-label="Close">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <path d="M7 7L25 25" stroke="#EC6F5D" stroke-width="2"/>
@@ -480,12 +430,12 @@
                 </svg>
             </button>
             <div>
-                    <ul class="header_nav_list">
-                        <li>
+                    <ul class="mobile_nav_list">
+                        <li class="active">
                             <a href="#">about us</a>
                         </li>
                         <li>
-                            <a href="#">services</a>
+                            <a href="services.html">services</a>
                         </li>
                         <li>
                             <a href="#">team</a>
