Small fix, PerfectPixel,Code formatting

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                         <li class="active"><a href="#" id="language-en">EN</a></li>
                     </ul>
                 </nav>
-                <div class="dot"></div>
+                <div class="dot_header"></div>
                 <p class="address">Kyiv, Mechnikova str, 14/1</p>
-                <div class="dot"></div>
+                <div class="dot_header"></div>
                 <a class="phone" href="tel:0800211927">0800 211 927</a>
-                <div class="dot"></div>
+                <div class="dot_header"></div>
                 <a class="facebook_header" href="https://facebook.com/">
                     <svg class="facebook_svg" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_123133_740)">
@@ -397,7 +397,7 @@
         <div class="footer_info">
             <div class="footer_address_block">
                 <p class="footer_address">Kyiv, Mechnikova str, 14/1</p>
-                <div class="dot"></div>
+                <div class="dot_footer"></div>
                 <a href="#">On map</a>
             </div>
             <div class="footer_socials">
@@ -408,9 +408,9 @@
                         </g>
                     </svg>
                 </a>
-                <div class="dot"></div>
+                <div class="dot_footer"></div>
                 <a class="footer_phone" href="tel:0800211927">0800 211 927</a>
-                <div class="dot"></div>
+                <div class="dot_footer"></div>
                 <a class="footer_email" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
             </div>
         </div>
@@ -430,23 +430,23 @@
                 </svg>
             </button>
             <div>
-                    <ul class="mobile_nav_list">
-                        <li>
-                            <a href="#">about us</a>
-                        </li>
-                        <li>
-                            <a href="services.html">services</a>
-                        </li>
-                        <li>
-                            <a href="#">team</a>
-                        </li>
-                        <li class="active">
-                            <a href="#">publications</a>
-                        </li>
-                        <li>
-                            <a href="#">contact</a>
-                        </li>
-                    </ul>
+                <ul class="mobile_nav_list">
+                    <li>
+                        <a href="#">about us</a>
+                    </li>
+                    <li>
+                        <a href="services.html">services</a>
+                    </li>
+                    <li>
+                        <a href="#">team</a>
+                    </li>
+                    <li class="active">
+                        <a href="#">publications</a>
+                    </li>
+                    <li>
+                        <a href="#">contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
