--- a/services.html
+++ b/services.html
@@ -18,7 +18,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style/reset.css">
 
     <link rel="stylesheet" href="style/main.css">
@@ -46,11 +47,11 @@
                         <li class="active"><a href="#" id="language-en">EN</a></li>
                     </ul>
                 </nav>
-                <div class="dot"></div>
+                <div class="dot_header"></div>
                 <p class="address">Kyiv, Mechnikova str, 14/1</p>
-                <div class="dot"></div>
+                <div class="dot_header"></div>
                 <a class="phone" href="tel:0800211927">0800 211 927</a>
-                <div class="dot"></div>
+                <div class="dot_header"></div>
                 <a class="facebook_header" href="https://facebook.com/">
                     <svg class="facebook_svg" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_123133_740)">
@@ -99,11 +100,15 @@
         </div>
         <h2>IT and e-commerce</h2>
         <div class="services_text">
-            <p>An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
-            <p>In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
+            <p>An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you
+                from doing business. But there is not much work to do to hire an in-house lawyer.</p>
+            <p>In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And
+                we know very well how difficult it is to find a good candidate with experience in the field of
+                information technology in Ukraine.</p>
         </div>
 
-        <button type="button" class="services_button btn btn-primary" data-bs-toggle="modal" data-bs-target="#cosultation">
+        <button type="button" class="services_button btn btn-primary" data-bs-toggle="modal"
+                data-bs-target="#cosultation">
             Free consultation
         </button>
 
@@ -156,13 +161,19 @@
                 <li>support of investment projects for the development of port infrastructure;</li>
                 <li>certification of GTS, entering information about them in mandatory databases and registers;</li>
                 <li>registration of permits for the construction of port terminals;</li>
-                <li>registration of permit and other mandatory documentation required for carrying out activities in the port (emission permit, conclusion on EIA, RTC, etc.);</li>
+                <li>registration of permit and other mandatory documentation required for carrying out activities in the
+                    port (emission permit, conclusion on EIA, RTC, etc.);
+                </li>
             </ul>
             <ul>
                 <li>support of procedures related to the lease of state property in the port;</li>
-                <li>support of procedures related to confirmation of the status of port operator, maritime agent, foreign sailing line;</li>
+                <li>support of procedures related to confirmation of the status of port operator, maritime agent,
+                    foreign sailing line;
+                </li>
                 <li>support of procedures related to the inclusion of the company within the port;</li>
-                <li>appeals against actions related to the illegal imposition of services in the port by monopoly companies.</li>
+                <li>appeals against actions related to the illegal imposition of services in the port by monopoly
+                    companies.
+                </li>
             </ul>
         </div>
 
@@ -198,11 +209,13 @@
             <article class="news_block_item">
                 <div class="news-img-2"></div>
                 <div class="text_block">
-                    <h4><a class="article_title" href="#">Penalty for the Good Corporation: what will happen to Google and
+                    <h4><a class="article_title" href="#">Penalty for the Good Corporation: what will happen to Google
+                        and
                         others for violating
                         the GDPR</a></h4>
                     <p class="news_date">September 29</p>
-                    <p class="news_text">And why the recovery of 50 million euros could be a fateful precedent According to
+                    <p class="news_text">And why the recovery of 50 million euros could be a fateful precedent According
+                        to
                         Mind.ua January 21 National Commission for Data Protection.</p>
                 </div>
             </article>
@@ -211,7 +224,8 @@
                 <div class="text_block">
                     <h4><a class="article_title" href="#">Millennial Testament</a></h4>
                     <p class="news_date">August 19</p>
-                    <p class="news_text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit
+                    <p class="news_text">What and how modern vloggers, opinion leaders and crypto-millionaires will
+                        inherit
                         A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
                 </div>
             </article>
@@ -223,7 +237,7 @@
         <div class="footer_info">
             <div class="footer_address_block">
                 <p class="footer_address">Kyiv, Mechnikova str, 14/1</p>
-                <div class="dot"></div>
+                <div class="dot_footer"></div>
                 <a href="#">On map</a>
             </div>
             <div class="footer_socials">
@@ -234,9 +248,9 @@
                         </g>
                     </svg>
                 </a>
-                <div class="dot"></div>
+                <div class="dot_footer"></div>
                 <a class="footer_phone" href="tel:0800211927">0800 211 927</a>
-                <div class="dot"></div>
+                <div class="dot_footer"></div>
                 <a class="footer_email" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
             </div>
         </div>
@@ -284,7 +298,9 @@
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
